# oga

./: .gitignore  Makefile.am  README  configure.ac  ovirt-agent2.files  ovirt-agent2.includes
ext/utf8cpp/: version
src/: Makefile.am  main.cpp
src/oga/: Makefile.am
src/oga/base/: Makefile.am  error_def.hpp  errors.cpp  errors.hpp  logging.cpp  logging.hpp  logging_appender.cpp  logging_appender.hpp  logging_formatter.cpp  logging_logger.cpp  process.cpp  process.hpp  thread.hpp  timer_queue.cpp  timer_queue.hpp  types.hpp
src/oga/base/detail/: process.hpp  process_posix.cpp  process_windows.cpp  thread.hpp  thread_posix.cpp  thread_windows.cpp
src/oga/comm/: Makefile.am  connection.cpp  connection.hpp
src/oga/comm/detail/: connection_linux.cpp  connection_linux.hpp  connection_windows.cpp  connection_windows.hpp  implementation_base.cpp  implementation_base.hpp
src/oga/core/: Makefile.am  agent.cpp  agent.hpp  data_provider.cpp  data_provider.hpp  logic.cpp  logic.hpp
src/oga/core/detail/: config_loader.cpp  config_loader.hpp  config_loader_linux.cpp  config_loader_windows.cpp
src/oga/core/providers/: applications.cpp  applications.hpp
src/oga/core/providers/detail/: applications.hpp  applications_linux.hpp  applications_linux_apt.cpp  applications_linux_apt.hpp  applications_linux_rpm.cpp  applications_linux_rpm.hpp  applications_windows.cpp  applications_windows.hpp
src/oga/handlers/: Makefile.am  handler.hpp  message_loop.hpp  plugin.hpp  plugin_api.cpp  plugin_api.h
src/oga/proto/: Makefile.am
src/oga/proto/config/: Makefile.am  config_parser.cpp  config_parser.hpp
src/oga/proto/json/: Makefile.am  json.cpp  json.hpp  json_generator.cpp  json_generator.hpp  json_parser.cpp  json_parser.hpp  main.cpp
src/oga/util/: Makefile.am  com_str.cpp  com_str.hpp  enable_if.hpp  encoding.cpp  encoding.hpp  registry.cpp  registry.hpp  shared_ptr.hpp  split.hpp  string_appender.hpp  strip.hpp  wmiclient.cpp  wmiclient.hpp
src/oga/util/type_traits/: Makefile.am  boolean.hpp  integral_type.hpp  is_same.hpp
util/: script_template.tpl
visualstudio/oga/: oga.sln  oga.vcxproj  oga.vcxproj.filters
